DAC6-4007 use overflow-wrap instead of word-wrap - appears to avoid horizontal scrolling issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@ $hmrc-assets-path: "/disclose-cross-border-arrangements/upload/assets/lib/hmrc-f
 @import "partials/spinner";
 
 .text-overflow{
-    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .remove-end-whitespace{
@@ -91,5 +91,5 @@ body:not(.js-enabled) .js-enabled {
 }
 
 .govuk-heading-l {
-    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
